# relayapi

./: .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  package.json  release-please-config.json  tsconfig.json
.github/workflows/: ci-api.yml  ci-app.yml  ci-lint.yml  deploy-api.yml  deploy-app.yml  deploy-docs.yml  publish-downloader.yml  publish-integrations.yml  publish-mcp-server.yml  publish-n8n-node.yml  publish-sdk.yml  publish-zapier.yml  sync-api-docs.yml
apps/api/: cors.json  package.json  tsconfig.json  wrangler.jsonc
apps/app/: TESTING_AUTOMATIONS.md  astro.config.mjs  components.json  package.json  tsconfig.json  wrangler.jsonc
apps/cli/: package.json  tsconfig.json
apps/docs/: .gitignore  mdx-components.tsx  next.config.mjs  (+5 more)
apps/downloader/: .env.example  Dockerfile  pyproject.toml  setup-vps.sh
apps/downloader/app/: config.py  main.py
apps/downloader/app/routes/: download.py  transcript.py
apps/downloader/app/services/: downloader.py  transcript.py
docs/: AUTOMATION_REWRITE.md  AUTOMATION_REWRITE_AUDIT.md  AUTOMATION_REWRITE_AUDIT_2.md  AUTOMATION_REWRITE_AUDIT_3.md  AUTOMATION_REWRITE_AUDIT_4.md  AUTOMATION_REWRITE_AUDIT_5.md  AUTOMATION_REWRITE_AUDIT_6.md  AUTOMATION_SYSTEM_DEEP_ANALYSIS_AND_REBUILD_PLAN.md  INBOX_MESSAGING_FEATURES_PLAN.md  MANYCHAT_AUTOMATION_GAP_ANALYSIS_AND_PLAN_2026-04-20.md  MULTI_TRIGGER_AUTOMATIONS_PLAN.md  POSTS_PAGE_IMPROVEMENTS.md  README.md  architecture.md  capabilities.md
patches/: undici@7.24.4.patch
scripts/: seed.ts  sync-catalog.ts  upgrade-catalog.ts
(+1672 files in other folders)
